comp0010-shell-python-p37/src/parse/ParserGrammarParser.py
# Generated from ParserGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ParserGrammarParser ( Parser ):

    grammarFileName = "ParserGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|'", "';'", "'-'", "'<'", "'>'", "'`'", 
                     "'\"'", "'''" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "SPACE", "NEWLINE", "CHARS" ]

    RULE_start = 0
    RULE_commandLine = 1
    RULE_command = 2
    RULE_pipe = 3
    RULE_sequence = 4
    RULE_modifier = 5
    RULE_flag = 6
    RULE_arg = 7
    RULE_name = 8
    RULE_redirect = 9
    RULE_subcommand = 10
    RULE_phrase = 11
    RULE_literal = 12
    RULE_string = 13
    RULE_dq_string = 14
    RULE_sq_string = 15

    ruleNames =  [ "start", "commandLine", "command", "pipe", "sequence", 
                   "modifier", "flag", "arg", "name", "redirect", "subcommand", 
                   "phrase", "literal", "string", "dq_string", "sq_string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    SPACE=9
    NEWLINE=10
    CHARS=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ParserGrammarParser.EOF, 0)

        def commandLine(self):
            return self.getTypedRuleContext(ParserGrammarParser.CommandLineContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(ParserGrammarParser.SPACE)
            else:
                return self.getToken(ParserGrammarParser.SPACE, i)

        def getRuleIndex(self):
            return ParserGrammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = ParserGrammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 32
                self.commandLine()


            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 35
                self.match(ParserGrammarParser.SPACE)
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 41
            self.match(ParserGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(ParserGrammarParser.CommandContext,0)


        def pipe(self):
            return self.getTypedRuleContext(ParserGrammarParser.PipeContext,0)


        def sequence(self):
            return self.getTypedRuleContext(ParserGrammarParser.SequenceContext,0)


        def getRuleIndex(self):
            return ParserGrammarParser.RULE_commandLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommandLine" ):
                listener.enterCommandLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommandLine" ):
                listener.exitCommandLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommandLine" ):
                return visitor.visitCommandLine(self)
            else:
                return visitor.visitChildren(self)




    def commandLine(self):

        localctx = ParserGrammarParser.CommandLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_commandLine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 43
                self.command()
                pass

            elif la_ == 2:
                self.state = 44
                self.pipe(0)
                pass

            elif la_ == 3:
                self.state = 45
                self.sequence(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(ParserGrammarParser.NameContext,0)


        def redirect(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserGrammarParser.RedirectContext)
            else:
                return self.getTypedRuleContext(ParserGrammarParser.RedirectContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(ParserGrammarParser.SPACE)
            else:
                return self.getToken(ParserGrammarParser.SPACE, i)

        def modifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserGrammarParser.ModifierContext)
            else:
                return self.getTypedRuleContext(ParserGrammarParser.ModifierContext,i)


        def getRuleIndex(self):
            return ParserGrammarParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = ParserGrammarParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 560) != 0):
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==9:
                    self.state = 48
                    self.match(ParserGrammarParser.SPACE)
                    self.state = 53
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 54
                self.redirect()
                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 55
                        self.match(ParserGrammarParser.SPACE) 
                    self.state = 60
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.name()
            self.state = 78
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 76
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        self.state = 70
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==9:
                            self.state = 67
                            self.match(ParserGrammarParser.SPACE)
                            self.state = 72
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 73
                        self.redirect()
                        pass

                    elif la_ == 2:
                        self.state = 74
                        self.match(ParserGrammarParser.SPACE)
                        self.state = 75
                        self.modifier()
                        pass

             
                self.state = 80
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserGrammarParser.CommandContext)
            else:
                return self.getTypedRuleContext(ParserGrammarParser.CommandContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(ParserGrammarParser.SPACE)
            else:
                return self.getToken(ParserGrammarParser.SPACE, i)

        def pipe(self):
            return self.getTypedRuleContext(ParserGrammarParser.PipeContext,0)


        def getRuleIndex(self):
            return ParserGrammarParser.RULE_pipe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipe" ):
                listener.enterPipe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipe" ):
                listener.exitPipe(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipe" ):
                return visitor.visitPipe(self)
            else:
                return visitor.visitChildren(self)



    def pipe(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ParserGrammarParser.PipeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_pipe, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.command()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 83
                self.match(ParserGrammarParser.SPACE)


            self.state = 86
            self.match(ParserGrammarParser.T__0)
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 87
                self.match(ParserGrammarParser.SPACE)


            self.state = 90
            self.command()
            self._ctx.stop = self._input.LT(-1)
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ParserGrammarParser.PipeContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_pipe)
                    self.state = 92
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==9:
                        self.state = 93
                        self.match(ParserGrammarParser.SPACE)


                    self.state = 96
                    self.match(ParserGrammarParser.T__0)
                    self.state = 98
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        self.state = 97
                        self.match(ParserGrammarParser.SPACE)


                    self.state = 100
                    self.command() 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class SequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserGrammarParser.CommandContext)
            else:
                return self.getTypedRuleContext(ParserGrammarParser.CommandContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(ParserGrammarParser.SPACE)
            else:
                return self.getToken(ParserGrammarParser.SPACE, i)

        def pipe(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserGrammarParser.PipeContext)
            else:
                return self.getTypedRuleContext(ParserGrammarParser.PipeContext,i)


        def sequence(self):
            return self.getTypedRuleContext(ParserGrammarParser.SequenceContext,0)


        def getRuleIndex(self):
            return ParserGrammarParser.RULE_sequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSequence" ):
                listener.enterSequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSequence" ):
                listener.exitSequence(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSequence" ):
                return visitor.visitSequence(self)
            else:
                return visitor.visitChildren(self)



    def sequence(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ParserGrammarParser.SequenceContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_sequence, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
            if la_ == 1:
                self.state = 107
                self.command()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9:
                    self.state = 108
                    self.match(ParserGrammarParser.SPACE)


                self.state = 111
                self.match(ParserGrammarParser.T__1)
                self.state = 113
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 112
                    self.match(ParserGrammarParser.SPACE)


                self.state = 115
                self.command()
                pass

            elif la_ == 2:
                self.state = 117
                self.pipe(0)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9:
                    self.state = 118
                    self.match(ParserGrammarParser.SPACE)


                self.state = 121
                self.match(ParserGrammarParser.T__1)
                self.state = 123
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                if la_ == 1:
                    self.state = 122
                    self.match(ParserGrammarParser.SPACE)


                self.state = 125
                self.command()
                pass

            elif la_ == 3:
                self.state = 127
                self.pipe(0)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9:
                    self.state = 128
                    self.match(ParserGrammarParser.SPACE)


                self.state = 131
                self.match(ParserGrammarParser.T__1)
                self.state = 133
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
                if la_ == 1:
                    self.state = 132
                    self.match(ParserGrammarParser.SPACE)


                self.state = 135
                self.pipe(0)
                pass

            elif la_ == 4:
                self.state = 137
                self.command()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9:
                    self.state = 138
                    self.match(ParserGrammarParser.SPACE)


                self.state = 141
                self.match(ParserGrammarParser.T__1)
                self.state = 143
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
                if la_ == 1:
                    self.state = 142
                    self.match(ParserGrammarParser.SPACE)


                self.state = 145
                self.pipe(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,25,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ParserGrammarParser.SequenceContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_sequence)
                    self.state = 149
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 151
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==9:
                        self.state = 150
                        self.match(ParserGrammarParser.SPACE)


                    self.state = 153
                    self.match(ParserGrammarParser.T__1)
                    self.state = 155
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,24,self._ctx)
                    if la_ == 1:
                        self.state = 154
                        self.match(ParserGrammarParser.SPACE)


                    self.state = 157
                    self.command() 
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,25,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def redirect(self):
            return self.getTypedRuleContext(ParserGrammarParser.RedirectContext,0)


        def flag(self):
            return self.getTypedRuleContext(ParserGrammarParser.FlagContext,0)


        def arg(self):
            return self.getTypedRuleContext(ParserGrammarParser.ArgContext,0)


        def getRuleIndex(self):
            return ParserGrammarParser.RULE_modifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModifier" ):
                listener.enterModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModifier" ):
                listener.exitModifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModifier" ):
                return visitor.visitModifier(self)
            else:
                return visitor.visitChildren(self)




    def modifier(self):

        localctx = ParserGrammarParser.ModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_modifier)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,26,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.redirect()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.flag()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 165
                self.arg()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FlagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def phrase(self):
            return self.getTypedRuleContext(ParserGrammarParser.PhraseContext,0)


        def getRuleIndex(self):
            return ParserGrammarParser.RULE_flag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlag" ):
                listener.enterFlag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlag" ):
                listener.exitFlag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlag" ):
                return visitor.visitFlag(self)
            else:
                return visitor.visitChildren(self)




    def flag(self):

        localctx = ParserGrammarParser.FlagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_flag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(ParserGrammarParser.T__2)
            self.state = 169
            self.phrase(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def phrase(self):
            return self.getTypedRuleContext(ParserGrammarParser.PhraseContext,0)


        def getRuleIndex(self):
            return ParserGrammarParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = ParserGrammarParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.phrase(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def phrase(self):
            return self.getTypedRuleContext(ParserGrammarParser.PhraseContext,0)


        def getRuleIndex(self):
            return ParserGrammarParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = ParserGrammarParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.phrase(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RedirectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def phrase(self):
            return self.getTypedRuleContext(ParserGrammarParser.PhraseContext,0)


        def SPACE(self):
            return self.getToken(ParserGrammarParser.SPACE, 0)

        def getRuleIndex(self):
            return ParserGrammarParser.RULE_redirect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRedirect" ):
                listener.enterRedirect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRedirect" ):
                listener.exitRedirect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRedirect" ):
                return visitor.visitRedirect(self)
            else:
                return visitor.visitChildren(self)




    def redirect(self):

        localctx = ParserGrammarParser.RedirectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_redirect)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            _la = self._input.LA(1)
            if not(_la==4 or _la==5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 176
                self.match(ParserGrammarParser.SPACE)


            self.state = 179
            self.phrase(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubcommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(ParserGrammarParser.SPACE)
            else:
                return self.getToken(ParserGrammarParser.SPACE, i)

        def commandLine(self):
            return self.getTypedRuleContext(ParserGrammarParser.CommandLineContext,0)


        def getRuleIndex(self):
            return ParserGrammarParser.RULE_subcommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubcommand" ):
                listener.enterSubcommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubcommand" ):
                listener.exitSubcommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubcommand" ):
                return visitor.visitSubcommand(self)
            else:
                return visitor.visitChildren(self)




    def subcommand(self):

        localctx = ParserGrammarParser.SubcommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_subcommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(ParserGrammarParser.T__5)
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,28,self._ctx)
            if la_ == 1:
                self.state = 182
                self.match(ParserGrammarParser.SPACE)


            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,29,self._ctx)
            if la_ == 1:
                self.state = 185
                self.commandLine()


            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 188
                self.match(ParserGrammarParser.SPACE)


            self.state = 191
            self.match(ParserGrammarParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PhraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHARS(self):
            return self.getToken(ParserGrammarParser.CHARS, 0)

        def phrase(self):
            return self.getTypedRuleContext(ParserGrammarParser.PhraseContext,0)


        def SPACE(self):
            return self.getToken(ParserGrammarParser.SPACE, 0)

        def subcommand(self):
            return self.getTypedRuleContext(ParserGrammarParser.SubcommandContext,0)


        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserGrammarParser.StringContext)
            else:
                return self.getTypedRuleContext(ParserGrammarParser.StringContext,i)


        def getRuleIndex(self):
            return ParserGrammarParser.RULE_phrase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPhrase" ):
                listener.enterPhrase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPhrase" ):
                listener.exitPhrase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPhrase" ):
                return visitor.visitPhrase(self)
            else:
                return visitor.visitChildren(self)



    def phrase(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ParserGrammarParser.PhraseContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_phrase, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 219
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,33,self._ctx)
            if la_ == 1:
                self.state = 194
                self.match(ParserGrammarParser.CHARS)
                pass

            elif la_ == 2:
                self.state = 195
                self.match(ParserGrammarParser.T__2)
                pass

            elif la_ == 3:
                self.state = 196
                self.match(ParserGrammarParser.T__5)
                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9:
                    self.state = 197
                    self.match(ParserGrammarParser.SPACE)


                self.state = 200
                self.match(ParserGrammarParser.T__5)
                self.state = 202
                self.phrase(9)
                pass

            elif la_ == 4:
                self.state = 203
                self.subcommand()
                self.state = 204
                self.phrase(7)
                pass

            elif la_ == 5:
                self.state = 206
                self.subcommand()
                pass

            elif la_ == 6:
                self.state = 208 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 207
                        self.string()

                    else:
                        raise NoViableAltException(self)
                    self.state = 210 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,32,self._ctx)

                pass

            elif la_ == 7:
                self.state = 212
                self.string()
                self.state = 213
                self.phrase(3)
                pass
